--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* Importa la fuente */
 @font-face {
     font-family: 'Gotham'; /* Nombre que le das a tu fuente */
-    src: url('fonts/gotham/gothammedium.ttf') format('truetype'); /* Ruta a tu archivo de fuente */
+    src: url('../fonts/gotham/gothammedium.ttf') format('truetype'); /* Ruta a tu archivo de fuente */
 }
 @font-face {
     font-family: "Antropos"; /* Nombre que le das a tu fuente */
-    src: url("fonts/antropos/antrf.ttf") format("truetype"); /* Ruta a tu archivo de fuente */
+    src: url("../fonts/antropos/antrf.ttf") format("truetype"); /* Ruta a tu archivo de fuente */
 }
 
 *
@@ -19,7 +19,7 @@
     --color-secundario: #ff9900;
     --color-secundario-claro: #ffc24a;
     }
- 
+
 ul{
   list-style-type: none;
   margin: 0;
@@ -48,7 +48,6 @@ li a:hover {
 	background-color: var(--color-secundario);
 	border-radius: 10px;
 }  
-
     
 .cabecera
     {
@@ -58,7 +57,7 @@ li a:hover {
         color: var(--color-claro);
         text-decoration: none;
         text-transform:none;
-                position: relative; /* Asegura que los elementos posicionados dentro de este div se basen en él */
+        position: relative; /* Asegura que los elementos posicionados dentro de este div se basen en él */
 
     }
 
@@ -95,31 +94,33 @@ li a:hover {
         color: var(--color-claro); /* Color del subtítulo */
         top: 80%; /* Ajusta la posición vertical del subtítulo */
         left:80%;
-
     }
     
 .cuerpo
 	{
-	 	display: flex;
-  		flex-direction: row;
-		flex-wrap: wrap;  		
-  		justify-content: center;
-  		align-content: strech;
-  		height: 550px;
-  		
-        padding: 2.5px;
-        text-align: center;
-        color: var(--color-oscuro);
-        background-color: white;
-        text-decoration: none;
-        border: 5px solid var(--color-oscuro);
-	}   
+        display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-content: stretch;
+            padding: 2.5px;
+            text-align: center;
+            color: var(--color-oscuro);
+            border: 5px solid var(--color-oscuro);
+            margin-bottom: 5%;
+            background-image: url('../img/fondo2.jpg'); /* Ruta de la imagen de fondo */
+            background-size: cover; /* Ajusta el tamaño de la imagen para que cubra todo el fondo */
+            background-position: center; /* Centra la imagen en el fondo */
+            background-color: rgba(0, 0, 0, 0.2); /* Cambia el último valor (0.8) para ajustar la opacidad */
+            border-radius: 12px;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); /* Sombra con transparencia */
+    }   
 	
 .columna
-{
+    {
 	border: 2.5px solid var(--color-oscuro);
 	border-radius: 10px;
-	 padding: 1%;
+	padding: 1%;
 	margin: 1%;
 	width: 25%;
 } 
@@ -169,8 +170,6 @@ li a:hover {
         text-transform: uppercase;
     }
 
-
-
 #subtitulo
     {
         font-size: 1em;
@@ -186,15 +185,18 @@ li a:hover {
 	text-align: center;
 	}
     
-    
 .parrafo {
-        background-color:var(--color-claro);
+        background-color:white;
         color:var(--color-oscuro);
-        border:5px solid var(--color-oscuro);
-        padding: 5%;
+        border: 1px solid var(--color-oscuro);
+        margin: 1%;
+        padding: 1%;
         font-family: Gotham, Verdana, Geneva, Tahoma, sans-serif;
         font-size: larger;
-      }
+        border-radius: 12px;
+        box-shadow: var(--color-oscuro) 5px 5px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2), var(--color-oscuro) 5px 5px 10px; /* Sombras con transparencia */
+    }
 
 .subtitulo
     {
@@ -227,6 +229,7 @@ li a:hover {
         display: inline-block;
         max-width: 300px;
     }
+
 .elemento a    {
         color: var(--color-claro);
         text-decoration: none;
@@ -235,13 +238,13 @@ li a:hover {
     
 footer
     {
-        position:fixed; 
-        bottom: 0;
-        width:98%;
+    position:fixed; 
+    bottom: 0;
+    width:98%;
     padding: 1%;
     text-align: center;
-      color:var(--color-claro);
-      background-color: var(--color-oscuro);
+    color:var(--color-claro);
+    background-color: var(--color-oscuro);
     }
 a
     {color: var(--color-medio);}
